fixed some scrollbar pop when removing tasks

--- a/src/components/ItemList/ItemList.css
+++ b/src/components/ItemList/ItemList.css
@@ -21,6 +21,7 @@
     list-style: none;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     gap: 1rem;
 
     &:has(li.completed) li.completed {
